--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
     <div id="block_video" class="block second">
         <div class="wrapper">
             <div id="video">
-                <iframe width="840"
-                        height="472"
-                        src="https://www.youtube.com/embed/qZNBtwwYd5o"
+                <iframe src="https://www.youtube.com/embed/qZNBtwwYd5o"
                         frameborder="0"
                         allow="autoplay; encrypted-media"
                         allowfullscreen>
