--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       content="ремонт квартир, Санкт-Петербург и Ленинградская область, под ключ, стоимость, недорого"/>
    <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
 
-   <link href="css/styles.css" rel="stylesheet">
-   <link href="css/jquery-ui.css" rel="stylesheet">
-   <!--<link href="bundle/bundle.css" rel="stylesheet">-->
+   <!--<link href="css/styles.css" rel="stylesheet">-->
+   <!--<link href="css/jquery-ui.css" rel="stylesheet">-->
+   <link href="bundle/bundle.css" rel="stylesheet">
 </head>
 <body>
 <!— Yandex.Metrika counter —>
@@ -518,13 +518,13 @@
             </li>
         </ul>
     </div>
-    <!--<script src="js/1_jquery.min.js"></script>-->
-    <!--<script src="js/2_jquery.maskedinput.min.js"></script>-->
-    <!--<script src="js/3_toastr.min.js"></script>-->
-    <!--<script src="js/4_materialize.js"></script>-->
-    <!--<script src="js/5_jquery.easydropdown.min.js"></script>-->
-    <!--<script src="js/6_jquery-ui.min.js"></script>-->
-    <!--<script src="js/7_scripts.js"></script>-->
-    <script src="bundle/bundle.min.js"></script>
+    <script src="js/1_jquery.min.js"></script>
+    <script src="js/2_jquery.maskedinput.min.js"></script>
+    <script src="js/3_toastr.min.js"></script>
+    <script src="js/4_materialize.js"></script>
+    <script src="js/5_jquery.easydropdown.min.js"></script>
+    <script src="js/6_jquery-ui.min.js"></script>
+    <script src="js/7_scripts.js"></script>
+    <!--<script src="bundle/bundle.min.js"></script>-->
 </body>
 </html>
