--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
             </li>
         </ul>
     </div>
-    <script src="js/1_jquery.min.js"></script>
-    <script src="js/2_jquery.maskedinput.min.js"></script>
-    <script src="js/3_toastr.min.js"></script>
-    <script src="js/4_materialize.js"></script>
-    <script src="js/5_jquery.easydropdown.min.js"></script>
-    <script src="js/6_jquery-ui.min.js"></script>
-    <script src="js/7_scripts.js"></script>
-    <!--<script src="bundle/bundle.min.js"></script>-->
+    <!--<script src="js/1_jquery.min.js"></script>-->
+    <!--<script src="js/2_jquery.maskedinput.min.js"></script>-->
+    <!--<script src="js/3_toastr.min.js"></script>-->
+    <!--<script src="js/4_materialize.js"></script>-->
+    <!--<script src="js/5_jquery.easydropdown.min.js"></script>-->
+    <!--<script src="js/6_jquery-ui.min.js"></script>-->
+    <!--<script src="js/7_scripts.js"></script>-->
+    <script src="bundle/bundle.min.js"></script>
 </body>
 </html>
