--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <div class="img_wrapper">
                         <img alt="фото прораба" src="img/prorab.jpg" />
                         <div class="header">
-                            <div class="top">Роман Дубровцев</div>
+                            <div class="top">Иван Хряпко</div>
                             <div class="bottom">Прораб</div>
                         </div>
                     </div>
