--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       content="ремонт квартир, Санкт-Петербург и Ленинградская область, под ключ, стоимость, недорого"/>
    <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
 
-   <!--<link href="css/styles.css" rel="stylesheet">-->
-   <!--<link href="css/jquery-ui.css" rel="stylesheet">-->
-   <link href="bundle/bundle.css" rel="stylesheet">
+   <link href="css/styles.css" rel="stylesheet">
+   <link href="css/jquery-ui.css" rel="stylesheet">
+   <!--<link href="bundle/bundle.css" rel="stylesheet">-->
 </head>
 <body>
 <!— Yandex.Metrika counter —>
@@ -119,23 +119,7 @@
             <span class="top_pointer"></span>
         </span>
     </div>
-    <div class="block second">
-        <div class="wrapper">
-
-        </div>
-    </div>
-    <!--<div id="block_video" class="block second">-->
-        <!--<div class="wrapper">-->
-            <!--<div id="video">-->
-                <!--<iframe src="https://www.youtube.com/embed/qZNBtwwYd5o"-->
-                        <!--frameborder="0"-->
-                        <!--allow="autoplay; encrypted-media"-->
-                        <!--allowfullscreen>-->
-                <!--</iframe>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <div id="block_benefits" class="block grey">
+    <div id="block_benefits" class="block second grey">
         <div class="wrapper">
             <div id="benefits">
                 <div class="top">
@@ -417,9 +401,15 @@
             </div>
         </div>
     </div>
-    <div class="block grey">
+    <div id="block_video" class="block grey">
         <div class="wrapper">
-
+            <div id="video">
+                <iframe src="https://www.youtube.com/embed/qZNBtwwYd5o"
+                        frameborder="0"
+                        allow="autoplay; encrypted-media"
+                        allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
     <div class="block order">
@@ -518,13 +508,13 @@
             </li>
         </ul>
     </div>
-    <!--<script src="js/1_jquery.min.js"></script>-->
-    <!--<script src="js/2_jquery.maskedinput.min.js"></script>-->
-    <!--<script src="js/3_toastr.min.js"></script>-->
-    <!--<script src="js/4_materialize.js"></script>-->
-    <!--<script src="js/5_jquery.easydropdown.min.js"></script>-->
-    <!--<script src="js/6_jquery-ui.min.js"></script>-->
-    <!--<script src="js/7_scripts.js"></script>-->
-    <script src="bundle/bundle.min.js"></script>
+    <script src="js/1_jquery.min.js"></script>
+    <script src="js/2_jquery.maskedinput.min.js"></script>
+    <script src="js/3_toastr.min.js"></script>
+    <script src="js/4_materialize.js"></script>
+    <script src="js/5_jquery.easydropdown.min.js"></script>
+    <script src="js/6_jquery-ui.min.js"></script>
+    <script src="js/7_scripts.js"></script>
+    <!--<script src="bundle/bundle.min.js"></script>-->
 </body>
 </html>
