--- a/index.html
+++ b/index.html
@@ -409,6 +409,11 @@
                         allow="autoplay; encrypted-media"
                         allowfullscreen>
                 </iframe>
+                <div style="margin-top: 10px">
+                    <a href="https://www.youtube.com/channel/UCtnvIZNiJkTL_-hAx_5H7zA" target="_blank" rel="noopener noreferrer">
+                        Канал на youtube
+                    </a>
+                </div>
             </div>
         </div>
     </div>
